Daftar pengadaan terbuka yang masih dalam tahap pendaftaran vendor diambil dari tabel pengadaan.Pengadaan dengan value pada field (AturanPengadaan) = "Pengadaan Terbuka", dan tabel pengadaan.JadwalPengadaan dengan field (tipe) = "pendaftaran" yang belum lewat dari tanggal di field (Sampai).

--- a/Reston.EProc.Model/Reston.Eproc.Model.csproj
+++ b/Reston.EProc.Model/Reston.Eproc.Model.csproj
@@ -63,6 +63,10 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NuGet.VisualStudio">
+      <HintPath>..\packages\NuGet.VisualStudio.2.8.1\lib\net40\NuGet.VisualStudio.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
