--- a/Reston.EProc.Model/packages.config
+++ b/Reston.EProc.Model/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="NuGet.VisualStudio" version="2.8.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="sharpconfig" version="1.5.2" targetFramework="net45" />
 </packages>
