--- a/Reston.Identity/idldap.config
+++ b/Reston.Identity/idldap.config
@@ -49,8 +49,8 @@
 	<add key="LDAP_ISADAM" value="false" />
 	<add key="LDAP_HOST" value="localhost:389" />
 	<add key="LDAP_CONTAINER" value="CN=mtf,DC=co,DC=id " />
-	<add key="LDAP_USERNAME" value="Tirta Fajar" />
-	<add key="LDAP_PASSWORD" value="harimau123" />
+	<add key="LDAP_USERNAME" value="HARRY" />
+	<add key="LDAP_PASSWORD" value="123456" />
 	
 	<!--END LDAP-->
 </appSettings>
