--- a/Reston.EProc.Runner/app.config
+++ b/Reston.EProc.Runner/app.config
@@ -54,7 +54,7 @@
   </runtime>
 	<connectionStrings>
 
-		<add name="JimbisEntities" connectionString="Server=.;Database=pengadaane;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+		<add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
 
