--- a/Reston.EProc.Web/app.config
+++ b/Reston.EProc.Web/app.config
@@ -70,6 +70,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="JimbisEntities" connectionString="Server=.;Database=pengadaane;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+		<add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
