--- a/Reston.EProc.Model/Reston.Eproc.Model.csproj
+++ b/Reston.EProc.Model/Reston.Eproc.Model.csproj
@@ -33,11 +33,13 @@
     <Reference Include="DocX">
       <HintPath>..\packages\DocX.1.0.0.19\lib\net40\DocX.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
@@ -79,6 +81,8 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Approval\Model\ViewApproval.cs" />
+    <Compile Include="Approval\Repository\ApprovalRepo.cs" />
     <Compile Include="Helper\Common.cs" />
     <Compile Include="Helper\Constants.cs" />
     <Compile Include="Helper\IdConfiguration.cs" />
@@ -92,6 +96,10 @@
     <Compile Include="Menu.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\Seeder.cs" />
+    <Compile Include="Monitoring\Entities\MonitoringPekerjaan.cs" />
+    <Compile Include="Monitoring\Model\enum.cs" />
+    <Compile Include="Monitoring\Model\ViewMonitoring.cs" />
+    <Compile Include="Monitoring\Repository\MoritoringRepo.cs" />
     <Compile Include="MyClass.cs" />
     <Compile Include="PengadaanRepository\RksRepo.cs" />
     <Compile Include="PengadaanRepository\PengadaanRepo.cs" />
