--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -167,7 +167,10 @@
     <Content Include="View\bootstrap\js\bootstrap.min.js" />
     <Content Include="View\bootstrap\js\npm.js" />
     <Content Include="View\catalog-detail.html" />
+    <Content Include="View\dist\js\pelaksanaan-terbuka.js" />
+    <Content Include="View\pengadaan-terbuka-detail.html" />
     <Content Include="View\create-rks.html" />
+    <Content Include="View\dist\js\pengadaan-terbuka-detail.js" />
     <Content Include="View\dist\js\create-rks.js" />
     <Content Include="View\dist\js\notifikasi-rekanan.js" />
     <Content Include="View\dist\js\pengadaan-add-terbuka.js" />
