--- a/Reston.EProc.Web/Reston.EProc.Web.csproj
+++ b/Reston.EProc.Web/Reston.EProc.Web.csproj
@@ -200,6 +200,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\MonitoringSelectionController.cs" />
+    <Compile Include="Controllers\ProyekController.cs" />
     <Compile Include="Controllers\RksController.cs" />
     <Compile Include="Controllers\PengadaanEController.cs">
       <SubType>Code</SubType>
@@ -234,7 +236,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="mockup\bootstrap\css\bootstrap.css.map" />
     <None Include="mockup\bootstrap\fonts\glyphicons-halflings-regular.eot" />
     <None Include="mockup\bootstrap\fonts\glyphicons-halflings-regular.svg" />
