masukin portal ke identity

--- a/.gitignore
+++ b/.gitignore
@@ -834,3 +834,4 @@ Reston.Identity.Repository/Migrations/ClientConfiguration/Copy of Seeder.cs
 Reston.Helper/Migrations/201608260739168_init2.resx
 /Reston.EProc.Runner.IIS/Download/Report/Temp/*.docx
 /Reston.EProc.Runner.IIS/View/create-rks - Copy.html
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-94f3c33c-da9e-446d-885a-8fc2524b1ed2.xlsx
