--- a/Reston.Identity/idldap.config
+++ b/Reston.Identity/idldap.config
@@ -25,6 +25,11 @@
 	<add key="ECONTRACT_CLIENTNAME" value="ECONTRACT" />
 	<add key="ECONTRACT_CLIENTID" value="contract" />
 	<add key="ECONTRACT_SECRET" value="econtractsecret" />
+	
+	<add key="ECONTRACT_URL" value="http://localhost:1999/" />
+	<add key="ECONTRACT_CLIENTNAME" value="EPORTAL" />
+	<add key="ECONTRACT_CLIENTID" value="portal" />
+	<add key="ECONTRACT_SECRET" value="secret" />
 
 
 	<add key="ID_SITENAME" value="EPROC Identity Service" />
@@ -47,10 +52,10 @@
 	<add key="LDAP_VERSION" value="3" />
 	<add key="LDAP_FASTBIND" value="false" />
 	<add key="LDAP_ISADAM" value="false" />
-	<add key="LDAP_HOST" value="localhost:389" />
-	<add key="LDAP_CONTAINER" value="CN=mtf,DC=co,DC=id " />
-	<add key="LDAP_USERNAME" value="HARRY" />
-	<add key="LDAP_PASSWORD" value="123456" />
+	<add key="LDAP_HOST" value="localhost:50002" />
+	<add key="LDAP_CONTAINER" value="CN=mtf-App,DC=mtf,DC=com " />
+	<add key="LDAP_USERNAME" value="jafar-PC\jafar" />
+	<add key="LDAP_PASSWORD" value="zaq1234rfvcx" />
 	
 	<!--END LDAP-->
 </appSettings>
