--- a/MTF_x/Web.config
+++ b/MTF_x/Web.config
@@ -9,13 +9,27 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-   <add name="PengadaanContext" connectionString="Server=.;Database=test;User ID=sa;Password=1234567890;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+   <add name="PengadaanContext" connectionString="Server=.;Database=test;User ID=sa;Password=1234567890;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="EPORTAL_URL" value="http://localhost:1999/" />
+	<add key="EPORTAL_CLIENTNAME" value="EPORTAL" />
+	<add key="EPORTAL_CLIENTID" value="portal" />
+	<add key="EPORTAL_SECRET" value="secret" />
+	  <!--IDENTITY SERVER-->
+	  <add key="IDSRV_URL" value="http://localhost:7348/identity" />
+	  <add key="IDSRV_SECRET" value="" />
+	  <add key="IDSRV_DNSSAFE" value="false" />
+	  <add key="IDSRV_RUNSEEDER" value="false" />
+
+	  <add key="IDM_URL" value="http://localhost:7348/" />
+	  <add key="IDM_CLIENTNAME" value="Identity Manager" />
+	  <add key="IDM_CLIENTID" value="idm" />
+	  <add key="IDM_SECRET" value="secret" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -44,6 +58,18 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
