--- a/MTF_x/packages.config
+++ b/MTF_x/packages.config
@@ -7,6 +7,7 @@
   <package id="datatables.net.core" version="1.10.12" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="font-awesome" version="4.6.1" targetFramework="net45" />
+  <package id="IdentityModel" version="1.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.12.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
@@ -16,20 +17,25 @@
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Facebook" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Google" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net45" />
+  <package id="Thinktecture.IdentityModel.Client" version="4.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
