Comit View Proyek dan Setting Database

--- a/.gitignore
+++ b/.gitignore
@@ -834,3 +834,49 @@ Reston.Identity.Repository/Migrations/ClientConfiguration/Copy of Seeder.cs
 Reston.Helper/Migrations/201608260739168_init2.resx
 /Reston.EProc.Runner.IIS/Download/Report/Temp/*.docx
 /Reston.EProc.Runner.IIS/View/create-rks - Copy.html
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-26a66750-b324-4d0d-a921-d31f04ec18a8.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-3732e3d9-742e-4cff-a8df-78f23dc91718.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-839f84c2-be8f-4ce3-aa89-46597a17cc2f.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-aa9ac824-5043-452c-8731-eb7823851b0a.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-f040187d-c698-4f31-921a-9209068862ed.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-09034ef0-27dd-4223-a6bd-9f8c0c2e5339.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-7e18b1db-f1d3-4ac6-a071-90efde0e5c4f.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-7e578757-deb0-41d3-b9c7-e2ff73c187f0.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-d1a7857c-3df7-4fe9-b7ff-d87b0de9437c.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-fd8979e1-9465-4b10-a04e-d6778b79fc06.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraKlarifikasi-ba6c6bfe-b35e-4660-9add-136b17bf344e.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraKlarifikasi-cc886c90-36ac-4f91-a087-47049cb4f2e3.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-231389ce-c58b-4d90-9ca9-25e5ac48f759.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-32f8b92c-05d0-49ec-88ff-b2a721b5052a.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-3606b04a-aff8-4124-9110-1755b0fde7ed.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-6c80348f-4ec0-4042-92db-fcddc3864ad6.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-9836b4d7-9c0d-4a60-a86e-d13ee71c6dae.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-b7d33be6-15b7-4eae-8c19-fa03a7da4d9b.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-d67d435e-271b-4d11-ae12-5010fa784d47.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-daa99c67-ec2e-4185-bf9c-b09afc6c60fc.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-e59b6e6b-b028-4a8a-9c18-5bdf65c74cd6.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-fd04fe0b-5518-4d2d-b8ca-dfd209d62335.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-461a4a05-6c97-4ac5-912e-acc0200789ac.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-5c3df971-3daf-47e4-a49d-58c53cdd84ce.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-619c6d37-fdb9-442d-a2d6-0e1eee7af08c.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-70e1a5d6-7cfd-4e39-bbd4-45dc9fbd9889.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BerkasRujukanLain-3ddbbd70-908e-48c0-a58e-904565b54a03.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BerkasRujukanLain-6c986d42-eb96-4acb-8a6c-a136d0d4f94c.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/DOKUMENLAIN-214b3a3d-4bfe-40fb-a668-0b6b1ac4fa15.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/DOKUMENLAIN-89c0edcc-8200-405d-b9a7-b40feab97aef.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/DOKUMENLAIN-e0e0b60c-bd2c-464f-a467-da0635cbac66.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-3594dfec-9dba-4e33-9cc6-db25e0ee330d.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-54eb0e33-c8a3-45d1-bf61-78708fdcac17.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-855a20c3-5556-43da-be03-e6dcd7ba0738.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-9554607f-31c8-4e93-be5f-b194c4b40fc0.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-9c02f378-3b37-4ca7-8942-ef28b3342b2d.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-9faf54b7-40d2-4922-8248-566aa7c915f7.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-b9134636-f585-4cfa-a649-28e6d8c3a4ad.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-e4494454-f377-47c3-aa6c-09b750d8de37.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-06e2ad31-a6a9-43c1-a151-dc5f7b58f98d.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-2af99917-3c64-4b00-af05-94cf5c005973.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-5125fdc4-b902-491b-9754-357c0b108598.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-51f2a5bc-3ad7-4583-a14c-4ca64e845212.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-cb717808-6495-4d7f-8669-07cdcabbf8d9.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-ee756090-fa2a-4e51-b1b3-abda7b0c692f.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-f0030488-141f-4f65-8f64-da311cbd6c02.png
