--- a/Reston.EProc.Model/Reston.Eproc.Model.csproj
+++ b/Reston.EProc.Model/Reston.Eproc.Model.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Monitoring\Entities\MonitoringPekerjaan.cs" />
     <Compile Include="Monitoring\Model\enum.cs" />
     <Compile Include="Monitoring\Model\ViewMonitoring.cs" />
+    <Compile Include="Monitoring\Model\ViewProyek.cs" />
     <Compile Include="Monitoring\Repository\MoritoringRepo.cs" />
     <Compile Include="MyClass.cs" />
     <Compile Include="PengadaanRepository\RksRepo.cs" />
