--- a/Reston.Identity.Repository/App.config
+++ b/Reston.Identity.Repository/App.config
@@ -17,8 +17,8 @@
   <connectionStrings>
     <!--<add name="IdLdapContext" connectionString="data source=(LocalDb)\v11.0;initial catalog=Reston.Identity.Repository.IdLdapContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="IdentityContext" connectionString="data source=(LocalDb)\v11.0;initial catalog=Reston.Identity.Repository.Identity.IdentityContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-	  <add name="IdLdapContext" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
-	  <add name="IdentityContext" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
+	  <add name="IdLdapContext" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
+	  <add name="IdentityContext" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
