--- a/.gitignore
+++ b/.gitignore
@@ -854,3 +854,4 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-94f3c33c-da9e-446d-885a-8f
 /Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-0991c97c-0f9e-405e-8bce-010af95983be. Halaman Kontak Kami.png
 /Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-84b0686c-d485-4be5-8d97-34c172e3d97a.png
 /Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-eb5ee41c-6b60-426f-be71-2e8091ac84f8. Pengumuman Pengadaan.png
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-5f51dd58-a821-439b-8ed9-aa19319d1b85.xlsx
