--- a/Reston.Helper/App.config
+++ b/Reston.Helper/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="HelperEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=1234567890;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
