--- a/.gitignore
+++ b/.gitignore
@@ -860,3 +860,5 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraKlarifikasi-70c2195d
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPendaftaran-b87937de-9fb8-442b-8a7c-34ab58ca0582.docx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-cb0288d1-d6c2-4a5f-b165-22c659fa0610.xlsx
 Reston.EProc.Runner.IIS/View/dashboard.htmlxxx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-6641e176-beaf-41ed-9833-12dd8e721233.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-91a69420-1b61-481c-8ad9-5fe9a44eaf1e.xlsx
