Monitoring Selection, Monitoring Proyek Add

--- a/.gitignore
+++ b/.gitignore
@@ -900,3 +900,30 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-94f3c33c-da9e-446d-885a-8f
 /Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-cb717808-6495-4d7f-8669-07cdcabbf8d9.jpg
 /Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-ee756090-fa2a-4e51-b1b3-abda7b0c692f.png
 /Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-f0030488-141f-4f65-8f64-da311cbd6c02.png
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-373bb89e-5680-4e5d-95c9-430214fe7b01.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-5a434ec4-0a2c-481c-988d-36871125e4f0.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-d7d2d8e5-3160-4a5f-a7c7-1ace8477218a.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-0917873b-b931-4396-acaa-0ffbdf11a202.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-20d7ecbe-a49d-46d3-bb17-32e671da19c1.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-5150b641-c77d-4444-bf0c-439860023118.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraKlarifikasi-1ea713d1-60b1-4d85-91f6-32de9d04dfda.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraKlarifikasi-543f1616-d36c-42f9-bb9f-a1092934131a.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraKlarifikasi-69e3f662-3317-4ff6-afdf-60d539910c4e.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-04dc69ff-c696-4fc9-bc7b-e093181db694.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-15c7ed62-16fc-44cc-adb9-b7504b27f304.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-677c3ea3-65aa-4bb5-abb3-2b9aecdc7123.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-92039980-c2f8-415a-9a15-3b6eaf061fc0.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-bee56f3b-f39e-4f23-b101-2b1d62d0c420.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-f057a58a-dbe8-4b82-97dd-a7e3d539d342.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/DOKUMENLAIN-d64a786c-6758-4cff-9072-d4bc34e9f5ba.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-9481e919-58c7-430a-aaa1-6cc192663727.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-a054d249-c099-4fd9-9313-9c349419ea0e.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-cb0ec946-45b0-4592-b80a-78ce7e7cdf02.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-4f60fb1a-17ea-4ffb-b40c-2fd0d5120330.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-8c356957-6e0d-4ae0-8363-a02ee2fda715.jpg
+/Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-e8088e8f-2742-45b3-8e57-16f4c792e4b7.jpg
+/Reston.EProc.Runner.IIS/Upload/Temp/0028fd0a-dc27-4da9-aedd-8b1d620d8ee9.jpg
+/Reston.EProc.Runner.IIS/Upload/Temp/0706de3d-9190-4fa0-8650-b8864b6eaa62.jpg
+/Reston.EProc.Runner.IIS/Upload/Temp/3e58a7d8-74d9-4412-b47a-5394ec3a28be.jpg
+/Reston.EProc.Runner.IIS/bundleconfig.json
+/Reston.EProc.Runner.IIS/Upload/Temp/1bc9474a-b438-44bc-964a-0bce7223a8e4.pdf
