js pengadaan terbuka, MTF_x

--- a/.gitignore
+++ b/.gitignore
@@ -862,3 +862,4 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-cb0288d1-d6c2-4a5f-b165-22
 Reston.EProc.Runner.IIS/View/dashboard.htmlxxx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-6641e176-beaf-41ed-9833-12dd8e721233.xlsx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-91a69420-1b61-481c-8ad9-5fe9a44eaf1e.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-86e0355f-233a-4ad9-a31f-ea576cbb8024.docx
