rks di rekanan, view rks di penilaian dan klarifikasi

--- a/.gitignore
+++ b/.gitignore
@@ -863,3 +863,7 @@ Reston.EProc.Runner.IIS/View/dashboard.htmlxxx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-6641e176-beaf-41ed-9833-12dd8e721233.xlsx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-91a69420-1b61-481c-8ad9-5fe9a44eaf1e.xlsx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-86e0355f-233a-4ad9-a31f-ea576cbb8024.docx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-8542da8d-d022-4f9b-8f9b-9f7f6ee3ed74.docx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-deedb79e-5984-4c17-be4d-91529bfd6fe8.docx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPendaftaran-46033aa8-5452-4867-add9-d4a78e6f48c0.docx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenilaian-e3c10ec2-71e3-4a80-a3e2-0ca5b62bd80d.docx
