Dashboard ada js yang ditambahkan ReferenceData ada penambahan
Monitoring Vendor
Monitoring Detail Vendor

--- a/.gitignore
+++ b/.gitignore
@@ -898,3 +898,4 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-4c0e3142-81f
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-4e3a0bc0-8031-45b0-a7c9-29ffa3711805.xlsx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-d19276a0-9189-4bb1-b12e-a3f4702af18b.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-faf5208c-97cf-4f35-ab54-24835213288e.xlsx
+/Reston.EProc.Runner.IIS/Upload/Temp/3e58a7d8-74d9-4412-b47a-5394ec3a28be.jpg
