--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -50,6 +50,9 @@
 	<add key="FILE_UPLOAD_REG" value="\Upload\Registrasi\" />
 	<add key="FILE_UPLOAD_DOC" value="\Upload\Dokumen\Pengadaan\" />
 	<add key="MSC_REGISTRATION_DUE" value="5" />
+  
+	<add key="FILE_UPLOAD_DOCPRO" value="E:\\RESTON\\pinatamtf2\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
+  
 
 	<!--IDENTITY SERVER-->
 	<add key="IDSRV_URL" value="http://localhost:7348/identity" />
