tambah no coa, PKS list,create approval, tambah workflow state buat sampe direksi, jangan lupa tambah role direksi, sama lega, rolenya: legal_admin , direksi, tambah di tabel role

--- a/.gitignore
+++ b/.gitignore
@@ -910,3 +910,37 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-32ba067e-4b8
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-38f0ff77-74da-4ff7-be59-35c66c5e3bcc.xlsx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-9bf32ae9-f6c2-4d11-a703-9b083dbdbac3.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-ffbbec8d-64f1-4878-89e6-57e61c8c8448.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-1536dd0f-9503-4328-a437-35910bed04af.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-171dcb4f-8b56-4602-bd46-4d3d7faf854b.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-1730cd02-ae6f-4017-b85f-61f78d536b23.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-3a71e1e5-fc60-4ee6-97bc-dbe7755a1803.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-3a992532-0651-4c7a-8709-45aabb392850.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-4000df0a-d398-41b3-8e3f-ef2c43743abc.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-43bb7fd0-6763-4e1f-888d-96b698bb1dbd.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-47a607cf-96fe-4910-8679-11446517e59d.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-712e5a93-39eb-435a-843b-eb6c1466e522.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-7243fcd2-084d-4037-871d-e203e265cb07.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-7d2ffa02-93ea-491a-9cf6-c7f127ec7d8b.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-902561ee-a2db-43cd-8e2a-91c9cadde5d0.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-92830538-66d0-4136-a850-61f2542e6204.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-981449f8-02e9-4d04-9386-902872d8ac64.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-992b379f-d00f-4d90-95a7-6705b727e03e.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-9fe403b4-6b97-4c24-876a-ef14742752bf.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-a71054ef-e205-4035-bce8-d38494eb5573.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-acfa3d08-86f9-443d-909a-22bee3138086.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-ae559955-1eb4-408e-8fcc-120d978bc492.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-c35c5a32-d133-476d-b37e-6eead4167ccc.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-c50286a1-e0be-4a7a-a15e-98a065191767.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-d3963b73-193b-4fe2-bc37-ef780a614aec.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-e3ad5392-e647-46f5-bcee-1f775f2a75b5.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/1342a484-f9af-487a-82cf-2796c4b9325c.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/3c479468-e967-4b3e-9225-c5536e40d3dc.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/45586263-e3ca-4f2e-9476-7dca8fb55e07.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/797c7348-8945-43fb-8eaa-ac270dc75a46.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/8353820a-d1cb-4d0c-8973-72435c9ee4b8.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/b0678814-bd86-426e-a73a-2368cd6c7945.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/c60d7d12-c131-448a-9c08-3bf4bafc553b.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/c88e7465-0416-460c-9c10-c59f1c2299b1.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/dd9d4dca-71ee-4929-9604-9d148eb5580d.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/e18cf3f5-e14a-4ca0-b8f3-77b30c6754d8.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/e324e9fb-e18d-4055-9262-8773610fd8b7.xls
