--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -12,7 +12,9 @@
 	<add key="WorkflowTemplateId1" value="1" />
 	<add key="WorkflowTemplateId2" value="2" />
 	<add key="BATASAN_BIAYA" value="50000000" />
+	<add key="BATASAN_BIAYA_DIREKSI" value="100000000" />
 	
+
 	<!--end-->
 	<add key="FROM_EMAIL" value="jimbis182@gmail.com" />
 	<add key="FROM_NAME" value="E-Procurement Mandiri Tunas Finance" />
@@ -49,6 +51,7 @@
 	<add key="FILE_UPLOAD_VENDOR" value="\Upload\Vendor\" />
 	<add key="FILE_UPLOAD_REG" value="\Upload\Registrasi\" />
 	<add key="FILE_UPLOAD_DOC" value="\Upload\Dokumen\Pengadaan\" />
+	<add key="FILE_DOKUMEN_PKS_PATH" value="\Upload\Dokumen\Pks\" />
 	<add key="MSC_REGISTRATION_DUE" value="5" />
   
 	<add key="FILE_UPLOAD_DOCPRO" value="E:\\RESTON\\pinatamtf2\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
