--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -2678,6 +2678,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Upload\Dokumen\Pks\" />
     <Folder Include="View\fonts\fonts\" />
     <Folder Include="View\ionicons\fonts\fonts\" />
     <Folder Include="View\plugins\JQueryValidation\validate\" />
