--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -42,6 +42,12 @@
 	<add key="MAIL_KLARIFIKASI_YTH" value="Kepada Yth" />
 	<add key="MAIL_KLARIFIKASI_FOOTER1" value="Tim Panitia Pengadaan" />
 	<add key="MAIL_KLARIFIKASI_FOOTER2" value="PT. Mandiri Tunas Finance" />
+
+	<add key="MAIL_PEMENANG_SUBJECT" value="Suprisee" />
+	<add key="MAIL_PEMENANG_BODY" value="Horee Kamu Menang" />
+	<add key="MAIL_KALAH_SUBJECT" value="Suprisee" />
+	<add key="MAIL_KALAH_BODY" value="Suprisee" />
+	
 	<add key="KODE_PENGADAAN" value="/EPROC/MTF-GA/" />
 	<add key="KODE_BERITAACARA" value="/MTF-GA/" />
 	<add key="KODE_NOTA" value="/NOTA-GA/MTF/" />
