--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -58,6 +58,7 @@
 	<add key="FILE_UPLOAD_REG" value="\Upload\Registrasi\" />
 	<add key="FILE_UPLOAD_DOC" value="\Upload\Dokumen\Pengadaan\" />
 	<add key="FILE_DOKUMEN_PKS_PATH" value="\Upload\Dokumen\Pks\" />
+	<add key="FILE_DOKUMEN_SPK_PATH" value="\Upload\Dokumen\Spk\" />
 	<add key="MSC_REGISTRATION_DUE" value="5" />
   
 	<add key="FILE_UPLOAD_DOCPRO" value="E:\\RESTON\\pinatamtf2\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
