--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -51,7 +51,7 @@
 	<add key="FILE_UPLOAD_DOC" value="\Upload\Dokumen\Pengadaan\" />
 	<add key="MSC_REGISTRATION_DUE" value="5" />
   
-	<add key="FILE_UPLOAD_DOCPRO" value="E:\\RESTON\\pinatamtf2\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
+	<add key="FILE_UPLOAD_DOCPRO" value="D:\\JOB\RESTON BISNIS SOLUSI\\mtf\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
   
 
 	<!--IDENTITY SERVER-->
