--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -42,6 +42,10 @@
 	<add key="MAIL_KLARIFIKASI_YTH" value="Kepada Yth" />
 	<add key="MAIL_KLARIFIKASI_FOOTER1" value="Tim Panitia Pengadaan" />
 	<add key="MAIL_KLARIFIKASI_FOOTER2" value="PT. Mandiri Tunas Finance" />
+	
+	<add key="MAIL_BODY_APPROVER" value="Ada Persetujuan Untuk Pengadaan: " />
+	<add key="MAIL_SUBJECT_APPROVER" value="Pemberitahuan Minta Persetujuan" />
+	
 
 	<add key="MAIL_PEMENANG_SUBJECT" value="Suprisee" />
 	<add key="MAIL_PEMENANG_BODY" value="Horee Kamu Menang" />
