--- a/Reston.EProc.Web/Reston.EProc.Web.csproj
+++ b/Reston.EProc.Web/Reston.EProc.Web.csproj
@@ -200,6 +200,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BudgetController.cs" />
     <Compile Include="Controllers\SpkController.cs" />
     <Compile Include="Controllers\PksController.cs" />
     <Compile Include="Controllers\MonitoringSelectionController.cs" />
