monitoring, benerin spk,beneren dll

--- a/.gitignore
+++ b/.gitignore
@@ -947,3 +947,6 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/e324e9fb-e18d-4055-9262-8773610fd8b7.
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-9db6cde8-db3d-4f36-89c3-9819167ecd0a.xlsx
 Reston.EProc.Runner.IIS/Upload/Dokumen/Spk/7b4995f2-4fc2-438c-9539-83939816bd61.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Spk/84137f1b-c11b-458e-a6fa-5a7ea40dcb50.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-7bd85ec0-7df5-4a21-8e2c-65c8dd8edd63.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-a667c7b2-b93e-4140-9828-7bb78c531003.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/SuratPerintahKerja-da5b3034-61f5-4f56-ba7a-c6d47d80a7e1.xlsx
