--- a/Reston.EProc.Runner.IIS/Web.config
+++ b/Reston.EProc.Runner.IIS/Web.config
@@ -67,8 +67,9 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-	  <!--<add name="JimbisEntities" connectionString="Server=SVR-EPROC\SQLSERVER;Database=Pengadaane;User ID=sa;Password=30Maret2016;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
-    <add name="JimbisEntities" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+	  <!--<add name="JimbisEntities" connectionString="Server=SVR-EPROC\SQLSERVER;Database=Pengadaane;User I
+	  D=sa;Password=30Maret2016;Trusted_Connection=False;" providerName="System.Data.SqlClient" />-->
+	  <add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=1234567890;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
